core update: fix bugs with cart items count on smaller screens

--- a/project/styles/main.css
+++ b/project/styles/main.css
@@ -239,9 +239,27 @@ a {
   background: var(--main-color2);
 }
  .mobile-cart-notifications{
-    display: none;
-    align-items: center;
-    gap: 15px;
+     display: none;
+     align-items: center;
+     gap: 10px;
+    }
+    .mobile-cart-notifications button{
+   border: none;
+  background: transparent;
+  outline: none;
+  font-size: 1.8rem;
+  position: relative;
+  color: var(--support-color);
+    }
+ .mobile-cart-notifications button span{
+    position: absolute;
+    top: -13px;
+    right: 0;
+    color: var(--white-color);
+    font-weight: bold;
+    font-size: 18px;
+
+
  }
 .mobile-nav-container a{
   display: block;
@@ -250,6 +268,7 @@ a {
 }
 .mobile-nav-container button {
   margin: 10px 1.25rem 0 1.25rem;
+ 
 
 }
 
@@ -1135,6 +1154,9 @@ footer {
   }
 }
 @media screen and (max-width: 575px) {
+    .brand-title{
+        font-size: 1.67rem;
+    }
   .full-product-details{
   padding: 10px ; 
 }
